# superset-nl-explorer

./: .gitignore  Dockerfile.custom  LICENSE  README.md  extension.json  pyproject.toml  superset_config_custom.py
backend/src/nl_explorer/: __init__.py  api.py  blueprint.py  chart_creator.py  context_builder.py  entrypoint.py  llm_service.py  schemas.py
backend/src/nl_explorer/prompts/: __init__.py  system.py  tools.py
backend/src/nl_explorer/templates/: tail_js_custom_extra.html
frontend/: package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/public/: index.html
frontend/src/: ChatPage.tsx  ChatPanel.tsx  index.tsx
tests/: conftest.py  test_chart_creator.py  test_context_builder.py  test_llm_service.py
